--- a/app/ios/Podfile
+++ b/app/ios/Podfile
@@ -12,6 +12,8 @@ target 'app' do
     :hermes_enabled => false
   )
 
+  pod 'react-native-appearance', :path => '../node_modules/react-native-appearance'
+
   target 'appTests' do
     inherit! :complete
     # Pods for testing
