--- a/app/package.json
+++ b/app/package.json
@@ -19,13 +19,19 @@
     "@react-navigation/drawer": "^6.1.3",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.6",
+    "firebase": "^8.9.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-appearance": "^0.3.4",
+    "react-native-dropdown-picker": "^5.1.23",
+    "react-native-form-validator": "^0.3.5",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-modal-dropdown": "^1.0.1",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
-    "react-native-svg": "^12.1.1"
+    "react-native-svg": "^12.1.1",
+    "react-native-zscrollview": "git+https://github.com/azwar/ZScrollView.git"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -33,6 +39,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.64.5",
+    "@types/react-native-modal-dropdown": "^0.7.1",
     "@types/react-test-renderer": "^16.9.2",
     "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
