--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,11 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-native-fontawesome": "^0.2.7",
+    "@react-native-async-storage/async-storage": "^1.15.6",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^12.7.0",
+    "@react-native-firebase/auth": "^12.7.0",
+    "@react-native-firebase/storage": "^12.7.0",
     "@react-navigation/drawer": "^6.1.3",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.6",
