--- a/app/package.json
+++ b/app/package.json
@@ -35,7 +35,10 @@
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
     "react-native-svg": "^12.1.1",
-    "react-native-zscrollview": "git+https://github.com/azwar/ZScrollView.git"
+    "react-native-zscrollview": "git+https://github.com/azwar/ZScrollView.git",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.1",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
