--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "@react-native-firebase/app": "^12.7.0",
     "@react-native-firebase/auth": "^12.7.0",
     "@react-native-firebase/storage": "^12.7.0",
+    "@react-native-seoul/masonry-list": "^1.0.7",
     "@react-navigation/drawer": "^6.1.3",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.6",
