--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "@react-native-seoul/masonry-list": "^1.0.7",
     "@react-navigation/drawer": "^6.1.3",
     "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.0.6",
     "firebase": "^8.9.1",
     "react": "17.0.1",
@@ -36,6 +37,7 @@
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
     "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-zscrollview": "git+https://github.com/azwar/ZScrollView.git",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
@@ -48,6 +50,7 @@
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.64.5",
     "@types/react-native-modal-dropdown": "^0.7.1",
+    "@types/react-native-vector-icons": "^6.4.8",
     "@types/react-test-renderer": "^16.9.2",
     "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
