--- a/app/package.json
+++ b/app/package.json
@@ -41,6 +41,7 @@
     "react-native-zscrollview": "git+https://github.com/azwar/ZScrollView.git",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3"
   },
   "devDependencies": {
