--- a/app/package.json
+++ b/app/package.json
@@ -17,8 +17,10 @@
     "@fortawesome/react-native-fontawesome": "^0.2.7",
     "@react-native-async-storage/async-storage": "^1.15.6",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^6.0.1",
     "@react-native-firebase/app": "^12.7.0",
     "@react-native-firebase/auth": "^12.7.0",
+    "@react-native-firebase/firestore": "^12.7.3",
     "@react-native-firebase/storage": "^12.7.0",
     "@react-native-seoul/masonry-list": "^1.0.7",
     "@react-navigation/bottom-tabs": "^6.0.5",
