--- a/app/package.json
+++ b/app/package.json
@@ -15,13 +15,15 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-native-fontawesome": "^0.2.7",
+    "@hookform/resolvers": "^2.8.0",
     "@react-native-async-storage/async-storage": "^1.15.6",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^6.0.1",
     "@react-native-firebase/app": "^12.7.0",
     "@react-native-firebase/auth": "^12.7.0",
     "@react-native-firebase/firestore": "^12.7.3",
-    "@react-native-firebase/storage": "^12.7.0",
+    "@react-native-firebase/storage": "^12.7.5",
+    "@react-native-picker/picker": "^2.0.0",
     "@react-native-seoul/masonry-list": "^1.0.7",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/drawer": "^6.1.4",
@@ -30,8 +32,10 @@
     "@react-navigation/stack": "^6.0.6",
     "firebase": "^8.9.1",
     "react": "17.0.1",
+    "react-hook-form": "^7.15.0",
     "react-native": "0.64.1",
     "react-native-appearance": "^0.3.4",
+    "react-native-customized-image-picker": "^1.2.2",
     "react-native-dropdown-picker": "^5.1.23",
     "react-native-form-validator": "^0.3.5",
     "react-native-gesture-handler": "^1.10.3",
@@ -45,7 +49,8 @@
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
