--- a/app/package.json
+++ b/app/package.json
@@ -39,6 +39,7 @@
     "react-native-dropdown-picker": "^5.1.23",
     "react-native-form-validator": "^0.3.5",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-indicators": "^0.17.0",
     "react-native-modal-dropdown": "^1.0.1",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.3.0",
@@ -58,6 +59,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.64.5",
+    "@types/react-native-indicators": "^0.16.1",
     "@types/react-native-modal-dropdown": "^0.7.1",
     "@types/react-native-vector-icons": "^6.4.8",
     "@types/react-test-renderer": "^16.9.2",
